# LePetitGestionnaire

./: LICENSE  LePetitGestionnaire.cabal  README.md
rsc/: BoiteContact.xml  BoiteLDC.xml  BoiteProjet.xml  BoiteRéunion.xml  styles.xml
src/: Cahier.hs  GUI.hs  ListeDeControle.hs  Main.hs  Persistance.hs
testSuites/tests/: TestsListeDeControle.hs
