name: LePetitGestionnaire
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: OtherLicense
license-file: LICENSE
maintainer: charles.stpierre@gmail.com
category: Gestion de projet
author: Charles St-Pierre
data-files: *.xml
data-dir: rsc

executable LePetitGestionnaire
    build-depends: base >=3, gtk -any, stm -any, time >= 1.5,
                   containers -any, text -any, yaml -any, aeson -any, bytestring -any,
                   parallel -any, async -any,
                   transformers -any, lens -any, filepath -any,
                   directory -any, unordered-containers -any, hsql-sqlite3 -any,
                   hsql -any, MissingH
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules: Persistance GUI ListeDeControle
    ghc-options: -fwarn-incomplete-patterns -fwarn-incomplete-record-updates

test-suite ListeDeControle
    build-depends: base >=3, HUnit -any, time >= 1.5, text -any,
                   bytestring -any, aeson -any, containers -any
    type: exitcode-stdio-1.0
    main-is: TestsListeDeControle.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: testSuites/tests src
    other-modules: ListeDeControle
